--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Google Classroom</title>
-<link rel="icon" href="https://www.google.com/images/branding/product/ico/classroom_64.ico">
+<link id="favicon" rel="icon" href="https://www.gstatic.com/classroom/favicon.png">
 <style>
 body { margin:0; font-family:"Segoe UI",sans-serif; background:#0d0d1a; color:white; height:100vh; overflow:hidden; }
 .sidebar { width:320px; background:#14142b; padding:20px; display:flex; flex-direction:column; overflow-y:auto; border-right:2px solid #252550; position:absolute; top:0; left:0; bottom:0; transition: transform 0.3s ease; z-index:2; }
 .sidebar.hidden { transform:translateX(-100%); }
 .sidebar h1 { font-size:22px; margin-bottom:10px; text-shadow:0 0 10px #5a5aff; }
-input { width:100%; padding:10px; border-radius:8px; border:none; margin-bottom:10px; background:#1f1f3d; color:white; position:sticky; top:0; z-index:5; }
-.az-filter { display:flex; flex-wrap:wrap; gap:4px; margin-bottom:6px; position:sticky; top:50px; background:#14142b; padding-top:5px; z-index:4; }
+.sidebar h1.panic-note { font-size:12px; }
+input { width:100%; padding:10px; border-radius:8px; border:none; margin-bottom:10px; background:#1f1f3d; color:white; position:sticky; top:50px; z-index:5; }
+.az-filter { display:flex; flex-wrap:wrap; gap:4px; margin-bottom:6px; position:sticky; top:110px; background:#14142b; padding-top:5px; z-index:4; }
 .az-filter button { background:#262650; border:none; padding:4px 7px; border-radius:4px; cursor:pointer; font-size:12px; color:white; }
 .az-filter button:hover { background:#4f4f9e; }
 #favBtn { background:#262650; border:none; border-radius:6px; padding:6px 0; margin:6px 0 10px 0; width:100%; cursor:pointer; font-size:14px; }
@@ -32,115 +33,48 @@ input { width:100%; padding:10px; border-radius:8px; border:none; margin-bottom:
 .content { position:absolute; top:0; bottom:0; left:320px; right:0; transition:left 0.3s; }
 .content.full { left:0; }
 .content iframe { width:100%; height:100%; border:none; }
-
-/* Settings modal */
-#modalOverlay { position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.7); display:none; z-index:10; }
-#settingsModal { position:fixed; top:50%; left:50%; transform:translate(-50%,-50%); background:#1b1b38; padding:20px; border-radius:12px; display:none; z-index:11; width:250px; text-align:center; }
-#settingsModal select { width:100%; padding:8px; margin:10px 0; border-radius:6px; border:none; background:#262650; color:white; }
-#settingsModal button { padding:7px 12px; border:none; border-radius:6px; background:#5a5aff; color:white; cursor:pointer; }
-#settingsModal button:hover { background:#7878ff; }
-#settingsBtn { background:#5a5aff; border:none; border-radius:6px; padding:6px 10px; color:white; cursor:pointer; margin-bottom:10px; }
-#settingsBtn:hover { background:#7878ff; }
 </style>
 </head>
 <body>
 
 <div class="sidebar" id="sidebar">
-  <h1>games bro</h1>
-  <h1 style="font-size:15px;">Press CTRL+Q (both of them at the same time) for panic key (switch to a different tab automatically) select them in settings</h1>
-  <button id="settingsBtn">Settings</button>
+  <h1>Game Library</h1>
+  <h1 class="panic-note">Press CTRL+Q (both keys) for panic key</h1>
   <input type="text" id="search" placeholder="Search games...">
   <div class="az-filter" id="azFilter"></div>
-  <button id="favBtn" style="background-color: yellow; color: black;">★ Favorites</button>
+  <button id="favBtn">★ Favorites</button>
   <div id="gamesContainer">Loading games...</div>
 </div>
 
 <div class="toggle-sidebar" id="toggleBtn">❮</div>
 <div class="content" id="content"><p style="color:#aaa;">Select a game from the sidebar.</p></div>
 
-<!-- Settings modal -->
-<div id="modalOverlay"></div>
-<div id="settingsModal">
-  <h2>Settings</h2>
-  <label for="tabSelect">Choose redirect and tab cloak:</label>
-  <select id="tabSelect">
-    <option value="classroom">Google Classroom</option>
-    <option value="docs">Google Docs</option>
-    <option value="slides">Google Slides</option>
-  </select>
-  <button id="closeSettings">Save</button>
-</div>
-
 <script>
-const sidebarEl = document.getElementById("sidebar");
-const toggleBtnEl = document.getElementById("toggleBtn");
+const sidebar = document.getElementById("sidebar");
+const toggleBtn = document.getElementById("toggleBtn");
 const gamesContainerEl = document.getElementById("gamesContainer");
 const contentEl = document.getElementById("content");
 const favBtnEl = document.getElementById("favBtn");
 
-const settingsBtnEl = document.getElementById("settingsBtn");
-const settingsModalEl = document.getElementById("settingsModal");
-const modalOverlayEl = document.getElementById("modalOverlay");
-const tabSelectEl = document.getElementById("tabSelect");
-const closeSettingsEl = document.getElementById("closeSettings");
-
 let favorites = JSON.parse(localStorage.getItem("favorites") || "[]");
 let showOnlyFav = false;
 
-// Load tab setting or default
-tabSelectEl.value = localStorage.getItem("tabSetting") || "classroom";
-applyTabSettings();
-
-function applyTabSettings(){
-  const tab = tabSelectEl.value || "classroom";
-  let tabName="", faviconURL="";
-  switch(tab){
-    case "classroom": tabName="Google Classroom"; faviconURL="https://www.google.com/images/branding/product/ico/classroom_64.ico"; break;
-    case "docs": tabName="Google Docs"; faviconURL="https://www.google.com/images/branding/product/ico/docs_64.ico"; break;
-    case "slides": tabName="Google Slides"; faviconURL="https://www.google.com/images/branding/product/ico/slides_64.ico"; break;
-  }
-  document.title = tabName;
-  let link = document.querySelector("link[rel='icon']");
-  if(!link){ link = document.createElement("link"); link.rel="icon"; document.head.appendChild(link);}
-  link.href = faviconURL;
-}
-
-// Sidebar toggle
-toggleBtnEl.onclick = ()=>{
-  sidebarEl.classList.toggle("hidden");
+// Toggle sidebar
+toggleBtn.onclick = () => {
+  sidebar.classList.toggle("hidden");
   contentEl.classList.toggle("full");
-  toggleBtnEl.style.left = sidebarEl.classList.contains("hidden") ? "0" : "300px";
-  toggleBtnEl.textContent = sidebarEl.classList.contains("hidden") ? "❯" : "❮";
+  toggleBtn.style.left = sidebar.classList.contains("hidden") ? "0" : "300px";
+  toggleBtn.textContent = sidebar.classList.contains("hidden") ? "❯" : "❮";
 };
 
-// Settings modal
-settingsBtnEl.onclick = ()=>{
-  modalOverlayEl.style.display="block";
-  settingsModalEl.style.display="block";
-};
-closeSettingsEl.onclick = ()=>{
-  modalOverlayEl.style.display="none";
-  settingsModalEl.style.display="none";
-  localStorage.setItem("tabSetting", tabSelectEl.value);
-  applyTabSettings();
-};
-
-// CTRL+Q redirect
-document.addEventListener("keydown", e=>{
-  if(e.ctrlKey && e.key.toLowerCase()==="q"){
-    e.preventDefault();
-    const tab = localStorage.getItem("tabSetting") || "classroom";
-    switch(tab){
-      case "classroom": window.open("https://classroom.google.com","_blank"); break;
-      case "docs": window.open("https://docs.google.com","_blank"); break;
-      case "slides": window.open("https://slides.google.com","_blank"); break;
-    }
-  }
-});
-
-// Format filename
+// Format filenames
 function formatName(name){
-  return name.replace(".html","").replace(/^cl/,"").replace(/[-_]/g," ").replace(/([a-z])([A-Z])/g,"$1 $2").trim().replace(/^./,c=>c.toUpperCase());
+  return name.replace(".html","")
+             .replace(/^cl/,"")
+             .replace(/[-_]/g," ")
+             .replace(/([a-z])([A-Z])/g,"$1 $2")
+             .trim()
+             .replace(/^./, c => c.toUpperCase());
 }
 
 // Fetch games
@@ -172,7 +106,7 @@ function renderGames(files, letter=null, search=""){
   attach(files);
 }
 
-// Generate card
+// Card generator
 function card(f,img,isFav){
   return `<div class="game-card" data-path="${f.path}">
     <img src="${img}">
@@ -238,7 +172,15 @@ function setupAZ(files){
   };
 }
 
-// Init
+// Panic key listener (CTRL+Q)
+document.addEventListener("keydown", e=>{
+  if(e.ctrlKey && e.key.toLowerCase()==="q"){
+    const url="https://classroom.google.com";
+    window.open(url,"_blank");
+  }
+});
+
+// Initialize
 fetchGames();
 </script>
 </body>
