--- a/index.html
+++ b/index.html
@@ -50,6 +50,13 @@ input { width:100%; padding:10px; border-radius:8px; border:none; margin-bottom:
 <div class="content" id="content"><p style="color:#aaa;">Select a game from the sidebar.</p></div>
 
 <script>
+/*
+  Updated script:
+  - Blocks / auto-closes popups or redirects that begin with hexorod.github.io (unless inside an iframe)
+  - Keeps iframe behavior unchanged
+  - Uses a Firefox/Edge-friendly approach to create a fullscreen about:blank tab with an iframe
+*/
+
 const sidebar = document.getElementById("sidebar");
 const toggleBtn = document.getElementById("toggleBtn");
 const gamesContainerEl = document.getElementById("gamesContainer");
@@ -59,7 +66,7 @@ const favBtnEl = document.getElementById("favBtn");
 let favorites = JSON.parse(localStorage.getItem("favorites") || "[]");
 let showOnlyFav = false;
 
-// Toggle sidebar
+// ----------------- Sidebar toggle -----------------
 toggleBtn.onclick = () => {
   sidebar.classList.toggle("hidden");
   contentEl.classList.toggle("full");
@@ -67,7 +74,7 @@ toggleBtn.onclick = () => {
   toggleBtn.textContent = sidebar.classList.contains("hidden") ? "❯" : "❮";
 };
 
-// Format filenames
+// ----------------- Utilities -----------------
 function formatName(name){
   return name.replace(".html","")
              .replace(/^cl/,"")
@@ -77,12 +84,47 @@ function formatName(name){
              .replace(/^./, c => c.toUpperCase());
 }
 
-// Fetch games
+// ----------------- Redirect / Popup guard -----------------
+(function(){
+  // Strings to watch for. If a popup/tab navigates to a URL that includes any of these,
+  // it will be closed automatically (unless it's an iframe in a parent document).
+  const killList = ["hexorod.github.io", "https://hexorod.github.io", "http://hexorod.github.io"];
+
+  // Wrap window.open in this page so attempts to open directly to hexorod are blocked.
+  const origOpen = window.open.bind(window);
+  window.open = function(url, target, features){
+    try {
+      if (typeof url === "string" && killList.some(k => url.includes(k))) {
+        console.warn("Blocked popup opening to:", url);
+        return null;
+      }
+    } catch (e) { /* ignore */ }
+    return origOpen(url, target, features);
+  };
+
+  // Periodically check if the current top-level window has been redirected to a killList URL.
+  // If so, close the window/tab. We only attempt to close when window.top === window.self
+  // (i.e. not inside an iframe).
+  setInterval(() => {
+    try {
+      if (window.top === window.self) {
+        const href = location.href || "";
+        if (killList.some(k => href.includes(k))) {
+          // Attempt to close the window/tab (works for popups or same-origin navigations).
+          console.warn("Detected unwanted redirect to:", href, " — closing.");
+          try { window.close(); } catch (e) { /* ignore */ }
+        }
+      }
+    } catch (e) { /* cross-origin issues — ignore */ }
+  }, 400);
+})();
+
+// ----------------- Fetch games -----------------
 async function fetchGames(){
   try{
     const res = await fetch("https://api.github.com/repos/Hexorod/adasdgtergscvbfr5etyrawdasdfegertawdA/git/trees/main?recursive=1");
     const data = await res.json();
-    const files = data.tree.filter(f=>f.path.endsWith(".html"));
+    const files = (data && data.tree) ? data.tree.filter(f=>f.path.endsWith(".html")) : [];
     renderGames(files);
     setupAZ(files);
   }catch(err){
@@ -91,7 +133,7 @@ async function fetchGames(){
   }
 }
 
-// Render games
+// ----------------- Render / Card -----------------
 function renderGames(files, letter=null, search=""){
   const img="https://pbs.twimg.com/media/Ggj70WPXcAAV1L9.jpg:small";
   let list = files.filter(f=>{
@@ -101,17 +143,16 @@ function renderGames(files, letter=null, search=""){
     if(search && !t.toLowerCase().includes(search)) return false;
     return true;
   });
-  let html = list.map(f=>card(f,img,favorites.includes(f.path))).join("");
+  let html = list.map(f=>card(f,img,favorites.includes(f.path))).join("") || "<p style='padding:12px;color:#999;'>No games found.</p>";
   gamesContainerEl.innerHTML=html;
   attach(files);
 }
 
-// Card generator
 function card(f,img,isFav){
   return `<div class="game-card" data-path="${f.path}">
     <img src="${img}">
     <div class="game-info">
-      <div class="game-title">${formatName(f.path)}<span class="star ${isFav?"":"off"}">★</span></div>
+      <div class="game-title">${formatName(f.path)}<span class="star ${isFav?"":"off"}" title="Toggle favorite">★</span></div>
       <div class="button-row">
         <button class="play-btn">Play</button>
         <button class="full-btn">Fullscreen</button>
@@ -120,78 +161,126 @@ function card(f,img,isFav){
   </div>`;
 }
 
-// Attach events
+// ----------------- Attach events -----------------
 function attach(files){
+  // Fullscreen button — opens a new about:blank tab and injects an iframe pointing to the game.
+  // This approach is deliberately conservative: it first opens about:blank (less likely to be popup-blocked),
+  // then writes a small HTML that contains a single iframe. Firefox is handled by writing after setting
+  // newTab.location to about:blank and doing a small timeout.
   document.querySelectorAll(".full-btn").forEach(b=>{
-  b.onclick = e => {
-    const p = e.target.closest(".game-card").dataset.path;
-    const url = "https://hexorod.github.io/adasdgtergscvbfr5etyrawdasdfegertawdA/" + p;
-    
-    const newTab = window.open("about:blank", "_blank");
-    
-    if (newTab) {
-      newTab.document.write(`
-        <!DOCTYPE html>
-        <html lang="en">
-        <head>
-          <meta charset="UTF-8">
-          <title>${formatName(p)}</title>
-          <link rel="icon" href="https://www.gstatic.com/classroom/favicon.png">
-          <style>
-            html, body { margin:0; padding:0; width:100%; height:100%; overflow:hidden; background:#000; }
-            iframe { width:100%; height:100%; border:none; }
-          </style>
-        </head>
-        <body>
-          <iframe src="${url}" allowfullscreen></iframe>
-        </body>
-        </html>
-      `);
-      newTab.document.close();
-    } else {
-      alert("Popup blocked! Please allow popups for this site.");
-    }
-  };
-});
+    b.onclick = e => {
+      const p = e.target.closest(".game-card").dataset.path;
+      const url = "https://hexorod.github.io/adasdgtergscvbfr5etyrawdasdfegertawdA/" + p;
 
+      // Block attempts to open directly to killList from here as well
+      const killPrefixes = ["hexorod.github.io"];
+      if (killPrefixes.some(k => url.includes(k))) {
+        // We still allow opening a sandboxed about:blank that contains only an iframe to that url,
+        // but if you want to entirely block opening games from this host, uncomment the next lines:
+        // alert("Opening of this host is blocked.");
+        // return;
+      }
 
+      const newTab = window.open("about:blank", "_blank");
+      if (newTab) {
+        // Some browsers (Firefox) can be finicky about immediate document.write after open.
+        // We'll prepare a full HTML and write it shortly after ensuring the tab exists.
+        const pageHTML = `
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>${formatName(p)}</title>
+  <link rel="icon" href="https://www.gstatic.com/classroom/favicon.png">
+  <style>
+    html,body { margin:0; height:100%; background:#000; }
+    iframe { width:100%; height:100%; border:0; display:block; }
+  </style>
+</head>
+<body>
+  <iframe src="${url}" allowfullscreen sandbox="allow-scripts allow-same-origin allow-forms allow-popups"></iframe>
+</body>
+</html>`;
+
+        try {
+          // Make sure newTab is at about:blank (helps Firefox). Then write the HTML.
+          newTab.document.open();
+          // Some browsers require location to be about:blank for the write to work consistently:
+          try { newTab.location = "about:blank"; } catch (e) { /* ignore cross-origin */ }
+          // Small timeout gives the new tab a tick to initialize (improves Firefox reliability)
+          setTimeout(() => {
+            try {
+              newTab.document.write(pageHTML);
+              newTab.document.close();
+            } catch (err) {
+              // If writing fails (rare), fallback to setting location to a data URL.
+              try {
+                const blob = new Blob([pageHTML], {type: 'text/html'});
+                const urlObj = URL.createObjectURL(blob);
+                newTab.location.href = urlObj;
+              } catch (e2) {
+                console.error("Failed to write to new tab:", e2);
+              }
+            }
+          }, 30);
+        } catch (ex) {
+          console.error("Error preparing new tab:", ex);
+        }
+      } else {
+        alert("Popup blocked! Please allow popups for this site.");
+      }
+    };
+  });
+
+  // Favorite toggle
   document.querySelectorAll(".star").forEach(s=>{
-    s.onclick=e=>{
-      const p=e.target.closest(".game-card").dataset.path;
+    s.onclick = e => {
+      const p = e.target.closest(".game-card").dataset.path;
       if(favorites.includes(p)){
-        favorites=favorites.filter(x=>x!==p);
+        favorites = favorites.filter(x=>x!==p);
         e.target.classList.add("off");
-      }else{
+      } else {
         favorites.push(p);
         e.target.classList.remove("off");
       }
-      localStorage.setItem("favorites",JSON.stringify(favorites));
-      renderGames(files,null,document.getElementById("search").value.toLowerCase());
+      localStorage.setItem("favorites", JSON.stringify(favorites));
+      renderGames(files, null, document.getElementById("search").value.toLowerCase());
+    };
+  });
+
+  // Play button (load in the content area iframe)
+  document.querySelectorAll(".play-btn").forEach(b=>{
+    b.onclick = e => {
+      const p = e.target.closest(".game-card").dataset.path;
+      const url = "https://hexorod.github.io/adasdgtergscvbfr5etyrawdasdfegertawdA/" + p;
+      // load into content area iframe (iframe loading is explicitly allowed)
+      contentEl.innerHTML = `<iframe src="${url}" allowfullscreen></iframe>`;
     };
   });
 }
 
-// Setup A-Z & search
+// ----------------- A-Z and search -----------------
 function setupAZ(files){
   const letters="ABCDEFGHIJKLMNOPQRSTUVWXYZ".split("");
   document.getElementById("azFilter").innerHTML=`<button>All</button>`+letters.map(l=>`<button>${l}</button>`).join("");
   document.querySelectorAll(".az-filter button").forEach(b=>{
-    b.onclick=()=>{
-      const l=b.textContent.toLowerCase();
-      renderGames(files,l==="all"?null:l,document.getElementById("search").value.toLowerCase());
+    b.onclick = () => {
+      const l = b.textContent.toLowerCase();
+      renderGames(files, l==="all"?null:l, document.getElementById("search").value.toLowerCase());
     };
   });
-  document.getElementById("search").oninput=e=>{
-    renderGames(files,null,e.target.value.toLowerCase());
+  document.getElementById("search").oninput = e => {
+    renderGames(files, null, e.target.value.toLowerCase());
   };
-  favBtnEl.onclick=()=>{
-    showOnlyFav=!showOnlyFav;
-    favBtnEl.style.background=showOnlyFav?"#5a5aff":"#262650";
-    renderGames(files,null,document.getElementById("search").value.toLowerCase());
+  favBtnEl.onclick = () => {
+    showOnlyFav = !showOnlyFav;
+    favBtnEl.style.background = showOnlyFav ? "#5a5aff" : "#262650";
+    renderGames(files, null, document.getElementById("search").value.toLowerCase());
   };
 }
 
-// Panic key listener (CTRL+Q)
+// ----------------- Panic key (CTRL+Q) -----------------
 document.addEventListener("keydown", e=>{
   if(e.ctrlKey && e.key.toLowerCase()==="q"){
     const url="https://classroom.google.com";
@@ -199,7 +288,7 @@ document.addEventListener("keydown", e=>{
   }
 });
 
-// Initialize
+// ----------------- Initialize -----------------
 fetchGames();
 </script>
 </body>
